--- a/src/Signin.css
+++ b/src/Signin.css
@@ -106,13 +106,16 @@
     font-weight: 900;
     font-style: italic;
   }
+
+  *
   {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
   }
+  
 body{
-    fontfamily: 'Poppins', sans-serif;
+    font-family: 'Poppins', sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     display: flex;
