--- a/src/index.css
+++ b/src/index.css
@@ -1,65 +1,20 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+  *
+  {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+  }
+  
+body{
+    font-family: 'Poppins', sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: rgb(5, 12, 49);
+}  
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
-.nav {
-  background-color: #002288;
-  color: white;
-  display: flex;
-  justify-content: space-between;
-  align-items: stretch;
-  gap: 2rem;
-  padding: 0 1rem;
-  position: fixed;
-  width: 100%;
-  top: 0;
-  left: 0;
-}
 
-.site-title {
-  font-size: 2rem;
-}
-
-.nav ul {
-  padding: 0;
-  margin: 0;
-  list-style: none;
-  display: flex;
-  gap: 0.7rem;
-}
-
-.nav a {
-  color: inherit;
-  text-decoration: none;
-  font-family: 'Roboto', sans-serif; 
-  height: 100%;
-  display: flex;
-  align-items: center;
-  text-align: center;
-  padding: .25rem;
-  transition: .3s;
-}
-
-/* .nav li.active {
-  background-color: #555;
-} */
-
-.nav li:hover {
-  background-color: #002288f0;
-}
-
-div.navClassname {
-  box-shadow: 0px 5px 10px rgba(0,0,0,0.6);
-  position: sticky;
-  top: 0;
-  z-index: 100;
-}
